# is-it-a-bird

./: .gitignore  .pdm.toml  Dockerfile  README.md  api.py  get_data.py  main.py  pyproject.toml  train_model.py  use_model.py
backend/: api.py  pyproject.toml  train_model.py  use_model.py
frontend/: index.html  package-lock.json
frontend/src/: App.css  App.jsx
model/: get_data.py  train_model.py  use_model.py
ui/: index.html  main.css
