[project]
name = ""
version = ""
description = ""
authors = [{ name = "Caroline Mimeault", email = "carolinemimeault@gmail.com" }]
dependencies = ["fastai>=2.7.12", "fastbook>=0.0.29"]
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.scripts]
data = "python get_data.py"
train = "python train_model.py"
classify = "python use_model.py"
