[project]
name = "Is-it-a-bird"
version = "0.0.1"
description = "API to determine if the image is a bird or not."
authors = [{ name = "Caroline Mimeault", email = "carolinemimeault@gmail.com" }]
dependencies = [
    "fastai>=2.7.12",
    "fastbook>=0.0.29",
    "fastapi>=0.96.1",
    "uvicorn[standard]>=0.22.0",
    "python-multipart>=0.0.6",
]
requires-python = ">=3.11"
license = { text = "MIT" }
[project.optional-dependencies]

[tool.pdm]
[tool.pdm.dev-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.scripts]
data = "python model/get_data.py"
train = "python model/train_model.py"
classify = "python model/use_model.py"
repl = "python"
start = "uvicorn main:app --host=0.0.0.0 --reload"
